--- a/WindowsUIWalla/ManageWalla/MainTwo.xaml
+++ b/WindowsUIWalla/ManageWalla/MainTwo.xaml
@@ -994,7 +994,7 @@
 
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
                             <Label x:Name="lblImageListName" Content="..."  Background="Transparent" FontSize="24" />
-                            <ComboBox x:Name="cmbGallerySection" Margin="10,0,0,0" Height="26" MinWidth="120" SelectionChanged="cmbGallerySection_SelectionChanged" >
+                            <ComboBox x:Name="cmbGallerySection" Margin="10,0,0,0" Height="26" MinWidth="120" SelectionChanged="cmbGallerySection_SelectionChanged" Background="{x:Null}" >
 
                             </ComboBox>
                         </StackPanel>
@@ -2099,7 +2099,7 @@
                                     <ColumnDefinition Width="200" />
                                 </Grid.ColumnDefinitions>
 
-                                <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="0" >
+                                <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" >
                                     <Button x:Name="cmdAccountRefresh" DockPanel.Dock="Right" Tag="false" VerticalAlignment="Center" Height="32" Padding="0" Margin="2" Style="{StaticResource styleButton}" Template="{StaticResource templateRefreshButton}" BorderThickness="0" Click="cmdAccountRefresh_Click" />
                                     <Label Content="Account" FontWeight="SemiBold" FontSize="24" VerticalContentAlignment="Center" />
                                 </StackPanel>
@@ -2120,16 +2120,18 @@
                                 <Label Grid.Column="0" Grid.Row="5" Content="Account Open" FontWeight="SemiBold"/>
                                 <Label x:Name="lblAccountOpen" Grid.Column="1" Grid.Row="5" />
 
+                                <!--
                                 <Label Grid.Column="0" Grid.Row="6" Content="Storage Limit" FontWeight="SemiBold"/>
                                 <Label x:Name="lblAccountStorageLimitGB" Grid.Column="1" Grid.Row="6" />
 
                                 <Label Grid.Column="0" Grid.Row="7" Content="Current Storage" FontWeight="SemiBold"/>
                                 <Label x:Name="lblAccountCurrentUtil" Grid.Column="1" Grid.Row="7" />
-
+                                -->
+                                
                                 <StackPanel Orientation="Horizontal" Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="2" >
                                     <Button x:Name="cmdAccountLogout" Content="Logout" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" Click="cmdAccountLogout_Click" />
                                     <Button x:Name="cmdUseOffline" Content="Use Offline" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" Click="cmdUseOffline_Click"  />
-                                    <Button x:Name="cmdUpdateProfileLoggedOn" Content="Update Profile" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" />
+                                    <Button x:Name="cmdAccountSettingsView" Content="View profile online" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" HorizontalAlignment="Right" Click="cmdAccountSettingsView_Click"  />
                                 </StackPanel>
 
 
@@ -2353,7 +2355,7 @@
                     <Line Stroke="{StaticResource FontBorderBrushSelected}" X1="0" Y1="5" X2="300" Y2="5" StrokeThickness="0.5" StrokeDashArray="5,10"  Margin="0" Grid.Column="2" Grid.Row="5" Grid.ColumnSpan="2" />
 
                     <Label Grid.Column="2" Grid.Row="6" Content="Password" FontWeight="SemiBold"/>
-                    <PasswordBox x:Name="txtAccountPassword" Grid.Column="3" Grid.Row="6" MaxLength="30" Margin="2" PasswordChar="*"  />
+                    <PasswordBox x:Name="txtAccountPassword" Grid.Column="3" Grid.Row="6" MaxLength="30" Margin="2" PasswordChar="*" KeyDown="txtAccountPassword_KeyDown"  />
 
                     <StackPanel Orientation="Horizontal" Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="2" HorizontalAlignment="Right" VerticalAlignment="Bottom">
                         <Button x:Name="cmdAccountLogin" Content="Login" Style="{StaticResource styleButton}" Template="{StaticResource templateButton}" Click="cmdAccountLogin_Click" />
